auth0 user can create account and animals w/predefined token

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_AUTH0_DOMAIN=dev-pwz4okbn.eu.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=Xg5laiJrNRy8wh5DLaZlC42Axsxlcqcq
+REACT_APP_AUTH0_AUDIENCE=http://localhost:8080/api
+REACT_APP_SERVER_URL=http://localhost:3000
